# batch-rs

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs
