[package]
name = "batch-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
env_logger = "0.9.0"
log = "0.4.17"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
postgres = { version = "0.19.3", features = ["with-chrono-0_4"] }
amiquip = { version = "0.4" }
anyhow = "1.0"
